Fix dropdown placeholder text alignment

--- a/src/components/Dropdown/_dropdown.scss
+++ b/src/components/Dropdown/_dropdown.scss
@@ -1,6 +1,6 @@
 .drop-render {
   display: flex;
-  width: 55%;
+  width: 100%;
   height: 35%;
   align-items: center;
   justify-content: center;
@@ -47,9 +47,9 @@
 }
 
 .dropdown .selected-value {
-  line-height: 1.5;
-  font-size: 1.3rem;
-  text-justify: center;
+  display: flex;
+  align-items: center;
+  // justify-content: center;
   background-color: $mid-emphasis-text;
   border: 1px solid #ccc;
   border-radius: 2px;
@@ -58,7 +58,7 @@
   outline: none;
   width: 100%;
   height: 100%;
-  padding: 12px 10px 7px 15px;
+  padding-left: 5%;
   transition: all 200ms ease;
 
   &:hover {
@@ -110,28 +110,37 @@
 
 /*~~~~~~ Responsive ~~~~~~ */
 
-@media screen and (min-width: 1600px) {
+@media screen and (min-width: 1500px) {
+
+  .drop-render {
+    min-width: 25em;
+    width: 100%;
+  }
+
   .dropdown .selected-value {
-    padding: 12px 5px 2px 14px;
+    font-size: 1.5rem;
+  }
+
+  .dropdown .arrow {
+    top: 25px;
   }
 }
 
-@media screen and (max-width: 1300px) {
+@media screen and (min-width: 1300px) {
+
+  .drop-render {
+    min-width: 20em;
+  }
+
   .dropdown .selected-value {
-    font-size: 1.1rem;
-    padding: 8px 5px 2px 14px;
+    font-size: 1.25rem;
   }
 }
 
 @media screen and (max-width: 1025px) {
 
-  .drop-render {
-    width: 75%;
-  }
-
   .dropdown .selected-value {
     font-size: 0.9rem;
-    padding: 8px 5px 2px 14px;
   }
 
   .dropdown a {
@@ -148,7 +157,6 @@
 
   .dropdown .selected-value {
     font-size: 0.9rem;
-    padding: 3px 5px 2px 10px;
   }
 
   .dropdown a {
@@ -164,7 +172,7 @@
 @media screen and (max-width: 651px) {
 
   .dropdown .selected-value {
-    padding: 2px 5px 2px 2px;
+    max-width: 20em;
   }
 
   .dropdown a {
@@ -176,7 +184,6 @@
 
   .drop-render {
     height: 45%;
-    width: 90%;
   }
 
   .dropdown a {
@@ -185,7 +192,6 @@
 
   .dropdown .selected-value {
     font-size: 0.6rem;
-    padding: 4px 5px 1px 6px;
   }
 
   .dropdown .arrow {
